--- a/Redirection.html
+++ b/Redirection.html
@@ -138,10 +138,10 @@
             </video>
 
             <!-- Buttons -->
-            <a href="https://www.yourwebsite.com" class="btn btn-primary">
+            <a href="https://www.aaib.com/" class="btn btn-primary">
                 <i class="fas fa-globe"></i> Visit Our Website
             </a>
-            <a href="https://wa.me/1234567890" class="btn btn-success">
+            <a href="https://wa.me/message/PFMWQMVHQSRFJ1?src=qr" class="btn btn-success">
                 <i class="fab fa-whatsapp"></i> Contact Us on WhatsApp
             </a>
         </div>
